# esp-idf-video-snapshot

./: CMakeLists.txt  README.md  partitions.csv  publish.py  sdkconfig.defaults  tcp_send.py  udp_send.py
components/conversions/: CMakeLists.txt  to_jpg.cpp
main/: CMakeLists.txt  Kconfig.projbuild  cmd.h  http_post.c  http_server.c  idf_component.yml  main.c  mqtt_pub.c  mqtt_sub.c  tcp_server.c  usb_camera.c
python-subscribe/: README.md  subscribe.py
